--- a/templates/captionmenu.mustache
+++ b/templates/captionmenu.mustache
@@ -24,8 +24,8 @@
     }
 }}
 
-<div class="btn-group dropup d-none" id="changecaption" data-uniqid="{{uniqid}}">
-    <span role="button"
+<div class="dropup d-none" id="changecaption" data-uniqid="{{uniqid}}">
+    <button role="button"
             data{{bs}}-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
@@ -34,7 +34,12 @@
             data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
             data{{bs}}-trigger="hover"
             data{{bs}}-title="{{#str}}subtitle,mod_interactivevideo{{/str}}"></i>
-    </span>
+        <span class="visually-hidden">{{#str}}subtitle, mod_interactivevideo{{/str}}</span>
+    </button>
     <div id="caption-dropdown"
-            class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black text-white"></div>
+         class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black text-white"
+         role="menu"
+         aria-labelledby="captionMenuButton-{{uniqid}}">
+    </div>
 </div>
+
