--- a/templates/player/messagetitle.mustache
+++ b/templates/player/messagetitle.mustache
@@ -24,15 +24,22 @@
     }
 }}
 
-<h5 class="modal-title text-truncate mb-0 d-flex align-items-center">
-    <i class="{{icon}} iv-mr-2 d-none d-md-inline fs-25px"></i>
+<h5 class="modal-title text-truncate mb-0 d-flex align-items-center"
+    id="modal-title-{{id}}" role="heading" aria-level="5">
+    <i class="{{icon}} iv-mr-2 d-none d-md-inline fs-25px" aria-hidden="true"></i>
     <span>{{{title}}}</span>
-    </h5>
+</h5>
+
 <div class="btns d-flex align-items-center">
     {{{completionbutton}}}
-<button data-id="{{id}}"
-    class="btn btn-flex iv-ml-2 p-0 border-0 interaction-dismiss bg-transparent" id="close-{{id}}"
-    aria-label="Close">
-<i class="bi bi-x-lg fs-25px"></i>
-</button>
+    <button data-id="{{id}}"
+            class="btn btn-flex iv-ml-2 p-0 border-0 interaction-dismiss bg-transparent"
+            id="close-{{id}}"
+            type="button"
+            data{{bs}}-toggle="tooltip"
+            aria-label="{{#str}}close, mod_interactivevideo{{/str}}"
+            title="{{#str}}close, mod_interactivevideo{{/str}}">
+        <i class="bi bi-x-lg fs-25px" aria-hidden="true"></i>
+        <span class="visually-hidden">{{#str}}close, mod_interactivevideo{{/str}}</span>
+    </button>
 </div>
