--- a/templates/player/speedmenu.mustache
+++ b/templates/player/speedmenu.mustache
@@ -23,22 +23,42 @@
     {
     }
 }}
-<div class="btn-group dropup d-none" id="changerate">
-            <span role="button"
-                  data{{bs}}-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1 {{^displayoptions.playbackrate}}d-none{{/displayoptions.playbackrate}}">
-                <i class="bi bi-speedometer2"
-                   data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
+<div id="changerate"
+     class="dropup d-none"
+     role="group"
+     aria-label="{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}">
+    <button type="button"
+            class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1 {{^displayoptions.playbackrate}}d-none{{/displayoptions.playbackrate}}"
+            id="rateMenuButton"
+            data{{bs}}-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+            aria-controls="ratelist"
+            title="{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}">
+        <i class="bi bi-speedometer2" aria-hidden="true"data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
                    data{{bs}}-trigger="hover"
                    data{{bs}}-title="{{#str}}changeplaybackspeed,mod_interactivevideo{{/str}}"></i>
-            </span>
-            <div class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black">
-                <a class="dropdown-item text-white changerate px-3" data-rate="0.5" href="#"><i class="bi fa-fw"></i>0.5</a>
-                <a class="dropdown-item text-white changerate px-3" data-rate="0.75" href="#"><i class="bi fa-fw"></i>0.75</a>
-                <a class="dropdown-item text-white changerate px-3" data-rate="1" href="#"><i class="bi fa-fw bi-check"></i>1</a>
-                <a class="dropdown-item text-white changerate px-3" data-rate="1.5" href="#"><i class="bi fa-fw"></i>1.5</a>
-                <a class="dropdown-item text-white changerate px-3" data-rate="2" href="#"><i class="bi fa-fw"></i>2</a>
-            </div>
-        </div>
+        <span class="visually-hidden">{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}</span>
+    </button>
+
+    <div id="ratelist"
+         class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black"
+         role="menu"
+         aria-labelledby="rateMenuButton">
+        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="0.5" role="menuitem">
+            <i class="bi fa-fw" aria-hidden="true"></i><span>0.5</span>
+        </button>
+        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="0.75" role="menuitem">
+            <i class="bi fa-fw" aria-hidden="true"></i><span>0.75</span>
+        </button>
+        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="1" role="menuitem" aria-checked="true">
+            <i class="bi fa-fw bi-check" aria-hidden="true"></i><span>1</span>
+        </button>
+        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="1.5" role="menuitem">
+            <i class="bi fa-fw" aria-hidden="true"></i><span>1.5</span>
+        </button>
+        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="2" role="menuitem">
+            <i class="bi fa-fw" aria-hidden="true"></i><span>2</span>
+        </button>
+    </div>
+</div>
